--- a/src/Pages/Withdrawal/WithdrawFunds.css
+++ b/src/Pages/Withdrawal/WithdrawFunds.css
@@ -318,7 +318,7 @@
   
   .WithdrawFundsContent{
     width: 100%;
-    height: 80vh;
+    height: max-content;
     background: #fff;
     border-radius: 5px;
     display: flex;
